2012-08-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/runtime.hh, runtime.cc, music/connector.hh: Initial
	support for MultiConnector:s. MultiConnector is an object
	governing simultaneous communication through a set of
	Connector:s.

	* runtime.cc, music/connector.hh, music/subconnector.hh: Added
	some debugging/analysis code.

2012-08-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/scheduler.hh (Scheduler::Node::outputConnections),
	scheduler.cc: Pass outputConnections as a pointer rather than as a
	vector.

	* event_routing_map.cc (OutputRoutingMap::fillRouter): Bugfix:
	return -> continue.

	* interval.cc: New file.

	* music/interval.hh: Make Interval:s printable.

	* music/music-config.hh-in: (and many other files) Some #include
	reorganization: Let those who need it include music-config.hh as
	the common first header file.

	* music/ordered_ilist.hh (OrderedIList::iterator): Satisfy BG/P
	compiler which complained that an OrderedIList member creates a
	circular reference with respect to type.

2012-08-22  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh, port.cc (Port::checkIndexMap): New member.

	* port.cc (OutputPort::mapImpl, InputPort::mapImpl: Use
	checkIndexMap.

	* event_routing_map.cc (OutputRoutingMap::fillRouter): Ask
	EventRouter if it needs as few points as possible rather than as
	few intervals as possible, and close gaps only in the latter case.
	This is important when using the new table based routing together
	with simulators with round-robin allocation, such as NEST.

	* music/event_router.hh: Let table based routers say that they
	need few points rather than intervals.

2012-08-21  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/interval_table.hh, music/ordered_ilist.hh: Introduced an
	interval table optimization variable MUSIC_ITABLE_FLAVOR with the
	options MUSIC_VANILLA, MUSIC_TRIMMED, MUSIC_COMPACT and
	MUSIC_SCATTERED explained at the top of music/interval_table.hh.
