@@ -1,5 +1,10 @@
 2012-08-25  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* music/memory.hh, memory.cc: New files.
+
+	* Makefile.am, runtime.cc: Report memory usage for world rank #0
+	using mallinfo.
+
 	* music/runtime.hh, runtime.cc, music/connector.hh: Initial
 	support for MultiConnector:s. MultiConnector is an object
 	governing simultaneous communication through a set of
